--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
         android:background="@drawable/start_button_bg_round"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/walk_button"
+        android:text="@string/start_button"
         android:layout_gravity="center_horizontal" />
 
 </LinearLayout>
