--- a/app/src/main/res/drawable/start_button_bg_round.xml
+++ b/app/src/main/res/drawable/start_button_bg_round.xml
@@ -2,9 +2,9 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="oval">
-            <stroke android:color="#44AA44" android:width="5dp" />
-            <solid android:color="#00FF00" />
-            <size android:width="100dp" android:height="100dp" />
+            <stroke android:color="@color/colorPrimaryDark" android:width="@dimen/button_border" />
+            <solid android:color="@color/colorPrimary" />
+            <size android:width="@dimen/button_size" android:height="@dimen/button_size" />
         </shape>
     </item>
 </selector>
