--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
-
+    <color name="colorPrimary">#03DAC6</color>
+    <color name="colorPrimaryDark">#018786</color>
+    <color name="colorAccent">#6200EE</color>
+    <color name="colorAccentDark">#3700B3</color>
+    <color name="colorError">#B00020</color>
+    <color name="lightText">#FFFFFF</color>
+    <color name="darkText">#000000</color>
     <color name="black_overlay">#66000000</color>
 </resources>
