--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,10 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="content_padding">16dp</dimen>
+    <dimen name="button_size">100dp</dimen>
+    <dimen name="button_border">5dp</dimen>
+    <dimen name="heading_size">50sp</dimen>
+    <dimen name="heading2_size">30sp</dimen>
+    <dimen name="paragraph_size">12sp</dimen>
 </resources>
