--- a/app/src/main/res/layout/activity_friend_view.xml
+++ b/app/src/main/res/layout/activity_friend_view.xml
@@ -3,7 +3,8 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:textAllCaps="false"
-    android:padding="25dp">
+    android:padding="25dp"
+    android:id="@+id/friendViewID">
 
 
 </Button>
