--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -119,6 +119,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="100dp"
         android:id="@+id/goalLayout"
         android:orientation="horizontal">
 
@@ -126,6 +127,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/goalBtn"
+            android:background="@drawable/start_button_bg_round"
+            android:textColor="@color/lightText"
             android:text="Set Goal"/>
 
         <EditText
@@ -142,42 +145,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="100dp"
+            android:background="@drawable/start_button_bg_round"
+            android:textColor="@color/lightText"
             android:text="View Friends" />
-    <ScrollView
-        android:id="@+id/scroll_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@id/text_message"
-        android:layout_below="@+id/goalLayout"
-        android:background="#ECEFF1"
-        android:fillViewport="true"
-        android:overScrollMode="always">
-
-        <TextView
-            android:id="@+id/chat"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="message will appear here"
-            android:padding="10dp"
-            android:scrollbars="vertical" />
-    </ScrollView>
-
-    <EditText
-        android:id="@+id/text_message"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/btn_send"
-        android:layout_margin="5dp"
-        android:hint="message" />
-
-    <Button
-        android:id="@+id/btn_send"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_margin="5dp"
-        android:text="send" />
-
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
