--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,5 @@
     <dimen name="heading2_size">30sp</dimen>
     <dimen name="paragraph_size">12sp</dimen>
     <dimen name="spacing_size">12dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
