--- a/app/src/main/res/layout/activity_view_friends.xml
+++ b/app/src/main/res/layout/activity_view_friends.xml
@@ -31,6 +31,11 @@
         android:layout_height="260dp"
         android:scrollbars="vertical" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -38,6 +43,16 @@
         android:textSize="20dp"
         android:layout_margin="20dp"
         android:layout_marginLeft="10dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="(click on the + button and enter their email to confirm their friends request)"
+        android:textSize="12dp"
+        android:paddingBottom="5dp"/>
+
+    </LinearLayout>
+
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/pendingFriendsList"
